--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "commandcord.js",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "A javascript/node.js discord API wrapper making commands easier than current wrappers.",
   "main": "index.js",
   "scripts": {
@@ -22,7 +22,7 @@
   "bugs": {
     "url": "https://github.com/rij1234/commandcord.js/issues"
   },
-  "homepage": "https://github.com/rij1234/commandcord.js#readme",
+  "homepage": "https://commandcord.js.org",
   "dependencies": {
     "node-fetch": "^2.6.1",
     "ws": "^7.4.2"
